luadir = $(datadir)/lua/5.1

lua_SCRIPTS = ansicolors.lua \
              cdata.lua \
              reflect.lua \
              ubx.lua \
              blockdiagram.lua \
              cdata_tolua_test.lua \
              strict.lua \
              cdata_layout.lua \
              luaffi-introspection.lua \
              time.lua \
              utils.lua \
              lunit-console.lua \
              lunit.lua

bin_SCRIPTS = lunit


