luadir = $(datadir)/lua/5.1

lua_SCRIPTS = cdata.lua \
              reflect.lua \
              ubx.lua \
              blockdiagram.lua \
              cdata_tolua_test.lua \
              cdata_layout.lua \
              luaffi-introspection.lua \
              lunit-console.lua \
              lunit.lua

bin_SCRIPTS = lunit


